--- a/deploy_ubuntu.yml
+++ b/deploy_ubuntu.yml
@@ -14,5 +14,6 @@
       register: clc
     - name: debug
       debug: var=clc.server_ids
+   tasks:
     - name: install apache2
       apt: name=apache2 update_cache=yes state=latest
