--- a/deploy_ubuntu.yml
+++ b/deploy_ubuntu.yml
@@ -9,20 +9,20 @@
         name: www
         template: ubuntu-16-64
         location: UC1
-        count: 3
+        count: 5
         group: 'Web Farm'
       register: clc
     - name: debug
       debug: var=clc.server_ids
 
-- name: Install Apache
-  hosts: all
-  tasks:
-    - name: 1. Install apache2
-      apt: name=apache2 state=latest
-
-    - name: 2. Install PHP module for Apache
-      apt: name=libapache2-mod-php5 state=present
-
-    - name: 3. Start Apache
-      service: name=apache2 state=restarted
+#- name: Install Apache
+#  hosts: all
+#  tasks:
+#    - name: 1. Install apache2
+#      apt: name=apache2 state=latest
+#
+#    - name: 2. Install PHP module for Apache
+#      apt: name=libapache2-mod-php5 state=present
+#
+#    - name: 3. Start Apache
+#      service: name=apache2 state=restarted
