--- a/deploy_ubuntu.yml
+++ b/deploy_ubuntu.yml
@@ -8,7 +8,7 @@
       clc_server:
         name: www
         template: ubuntu-16-64
-        location: UC1
+        location: IL1
         count: 5
         group: 'Web Farm'
       register: clc
